...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="a1l-kd-T8N">
                                <rect key="frame" x="12" y="65" width="327" height="38"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="SEARCH" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3DF-JC-EcO">
                                        <rect key="frame" x="30" y="6" width="295" height="28"/>
                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="28" id="Pnu-b6-Qjp"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                    <constraint firstAttribute="trailing" secondItem="kZg-H4-fMk" secondAttribute="trailing" id="jiW-wh-lhS"/>
                                    <constraint firstAttribute="bottom" secondItem="kZg-H4-fMk" secondAttribute="bottom" id="vUx-l5-eyA"/>
                                </constraints>
                                <viewLayoutGuide key="contentLayoutGuide" id="uYZ-Ot-gxV"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="RaP-05-mGH"/>
                            </scrollView>
                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filter" translatesAutoresizingMaskIntoConstraints="NO" id="oO9-ja-hFi">
                                <rect key="frame" x="351" y="71" width="30" height="30"/>
                                <color key="tintColor" name="TabBarColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="Mnt-oS-FtZ"/>
                                    <constraint firstAttribute="width" constant="30" id="Vg1-83-j2c"/>
                                </constraints>
...
                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="releasedgame" translatesAutoresizingMaskIntoConstraints="NO" id="d01-Rm-U2w">
                                                                                <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                                                <constraints>
                                                                                    <constraint firstAttribute="width" secondItem="d01-Rm-U2w" secondAttribute="height" id="YJh-2m-opj"/>
                                                                                </constraints>
                                                                            </imageView>
                                                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="globe" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="67n-ed-Flt">
                                                                                <rect key="frame" x="339" y="0.99999999999999822" width="30" height="28.666666666666664"/>
                                                                                <constraints>
                                                                                    <constraint firstAttribute="width" secondItem="67n-ed-Flt" secondAttribute="height" id="7An-J2-Gpm"/>
                                                                                </constraints>
                                                                            </imageView>
                                                                        </subviews>
...
