...
final class DetailVideoGamePresenter {
    // MARK: - Variable Definitions
    internal unowned var view: DetailVideoGameViewControllerProtocol
    internal let router: DetailVideoGameRouterProtocol
    internal let interactor: DetailVideoGameInteractorProtocol
    private var idOfVideoGame: String?
    private let titleOfPopUpForUnLike = "Are you sure?"
    private let contentOfPopUpForUnLike = "You are about to deregister the game"
    internal var isLiked: Bool = false
    private(set) var videoGame: DetailVideoGame? {
        didSet {
            reloadData()
        }
...
        } else {
            let okAction = {
                guard let idVideoGame = self.idOfVideoGame,
                      let id = Int(idVideoGame) else { return }
                self.interactor.unLikedVideoGame(["id": id])
            }
            self.view.showPopUp(titleOfPopUpForUnLike, contentOfPopUpForUnLike, buttonTitle: "Remove", buttonAction: okAction, cancelAction: nil)
        }
    }
    
    func viewDidLoad() {
        self.view.showLoading()
        self.view.configBackButton()
...
