...
        )
        let okAction = UIAlertAction(title: buttonTitle, style: .default) { _ in
            guard let buttonAction else { return }
            buttonAction()
        }
        alertController.addAction(okAction)
        let cancelAction = UIAlertAction(title: "Cancel", style: .default) { _ in
            guard let cancelAction else { return }
            cancelAction()
        }
        alertController.addAction(cancelAction)
        self.present(alertController, animated: true)
    }
...
